--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Django==1.7.7
 Markdown==2.6.1
 bleach==1.4.1
-python-social-auth==0.4.2
+python-social-auth==0.2.3
+requests-oauthlib==0.4.2
 requests==2.6.0
 django-memoize==1.1.2
 django-cachalot==1.0.0
